--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
 
                 <data
                     android:host="bapspatil.com"
-                    android:pathPrefix="/"
+                    android:pathPrefix="/slicedemo"
                     android:scheme="http" />
             </intent-filter>
         </provider>
